# Energy_consumption

./: .gitignore  CNAME  LP_AT0080000870000000000000000097058_2019.csv  README.md  app.py  create-analysis.sh  electricity_consumption.ipynb  energy_analysis.py  final_refactored_app.py  graz_weather_cleaned.csv  helper_classes.py  main.py  pyproject.toml  requirements.txt
data/Analysis_results/AT/: AT0081300000000000000000008944001_LPvom01012019bis31122019.CSV_combined_info_in_kWh.csv
data/Analysis_results/LP/: LP_AT0080000870000000000000000097058_2019.csv_combined_info_in_kWh.csv
data/preprocessed/: avg_lp.csv  lp.csv  lp_daily.csv  lp_monthly.csv  lp_table.csv  lp_weekly.csv
data/raw/: AT0081300000000000000000008944001_LPvom01012019bis31122019.CSV  LP_AT0080000870000000000000000097058_2019_basic_info.csv  LP_AT0080000870000000000000000097058_2019_dataset_info.csv  profil_LWS_2020_L.csv
