[tool.poetry]
name = "energy consumption"
version = "0.1.0"
description = "Analyzing and creating dashboard for different energy consumption data"
authors = ["Anas Mohamed <anasmohemmed21@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
numpy = "*"
streamlit = "*"
plotly = "*"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
