[tool.poetry]
name = "energy consumption"
version = "0.1.0"
description = "Analyzing and creating dashboard for different energy consumption data"
authors = ["Anas Mohamed <anasmohemmed21@yahoo.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.9.7 || >3.9.7"
pandas = "1.4.3"
numpy = "1.22.4"
streamlit = "1.25.0"
plotly = "5.15.0"
scipy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
